text-align-fix

--- a/style.css
+++ b/style.css
@@ -1659,7 +1659,6 @@ div.type-post {
 	display: inline-block;
 	max-width: 100%;
 	margin-top: 27px;
-	text-align: justify;
 }
 .blog-single .type-post .entry-content {
 	margin-top: 50px;
